k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diary-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diary-backend
  template:
    metadata:
      labels:
        app: diary-backend
    spec:
      imagePullSecrets:
       - name: dockerhub-auth
      containers:
      - name: diary-backend
        image: kimchangbeom/diary-backend:v0.13 # 도커 허브 이미지
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: bastion-key
            mountPath: /app/keys
            readOnly: true
      volumes:
        - name: bastion-key
          secret:
            secretName: bastion-key
