k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diary-backend-service
spec:
  selector:
    app: diary-backend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort : 30080
  type: NodePort
