k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diary-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: diary.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: diary-backend-service
                port:
                  number: 8000
